fixing icons for firefox

--- a/index.html
+++ b/index.html
@@ -29,60 +29,60 @@
                 </div>
             </a>
             <div>
-                <img class="icon" src="assets/iconos/calendarIcon.avif" alt="Horario">
+                <img class="icon" src="./assets/iconos/calendarIcon.avif" alt="Horario">
                 <p> Lunes a viernes 09:00 am a 09:00</p>
             </div>
             <a target="_blank" href="https://goo.gl/maps/f3qjvEKniKmMa57v7">
                 <div>
-                    <img class="icon" id="ico-ubicacion" src="assets/iconos/locationIcon.avif" alt="Direccion">
+                    <img class="icon" id="ico-ubicacion" src="./assets/iconos/locationIcon.avif" alt="Direccion">
                     <p> Blvd. Manlio Fabio Beltrones 1819, Beltrones, 85860 Navojoa, Son.</p>
                 </div>
             </a>
             <div>
-                <img class="icon" src="assets/iconos/email.avif" alt="Email">
+                <img class="icon" src="./assets/iconos/email.avif" alt="Email">
                 <p> Ventas@dinav.com.mx</p>
             </div>
         </div>
         <nav class="nav" id="nav">
             <div class="nav__logo">
-                <img  class="nav__logo__img" id="logo" src="assets/logo.avif" alt="Logo">
+                <img  class="nav__logo__img" id="logo" src="./assets/logo.avif" alt="Logo">
                 <div class="nav__barrita"></div>
                 <p class="nav__logo__p">Distribuidora <br> Industrial <br> Navojoa</p>
             </div>
             <ul>
                 <li>
                     <a href="#inicio">
-                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                        <img alt="iconoFlecha" src="./assets/iconos/iconarrow.svg"></img>
                         Inicio
                     </a>
                 </li>
                 <li>
                     <a href="#quienesSomos">
-                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                        <img alt="iconoFlecha" src="./assets/iconos/iconarrow.svg"></img>
                         ¿Quiénes somos?
                     </a>
                 </li>
                 <li>
                     <a href="#tornilleria">
-                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                        <img alt="iconoFlecha" src="./assets/iconos/iconarrow.svg"></img>
                     Tornillería
                     </a>
                 </li>
                 <li>
                     <a href="#proveedores">
-                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                        <img alt="iconoFlecha" src="./assets/iconos/iconarrow.svg"></img>
                         Proveedores
                     </a>
                 </li>
                 <li>
                     <a href="#productos">
-                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                        <img alt="iconoFlecha" src="./assets/iconos/iconarrow.svg"></img>
                         Catálogo 
                     </a>
                 </li>
                 <li>
                     <a href="#contacto">
-                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                        <img alt="iconoFlecha" src="./assets/iconos/iconarrow.svg"></img>
                         Contacto
                     </a>
                 </li>
@@ -98,37 +98,37 @@
                 <ul class="menuMobile__lista">
                     <li class="menuMobile__lista__item">
                         <a href="#inicio" class="abtn">
-                                <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                                <img alt="iconoFlecha" src="./assets/iconos/iconarrow.svg"></img>
                                 Inicio
                         </a>
                     </li>
                     <li class="menuMobile__lista__item">
                         <a href="#quienesSomos" class="abtn">
-                                <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                                <img alt="iconoFlecha" src="./assets/iconos/iconarrow.svg"></img>
                                 ¿Quiénes somos?
                         </a>
                     </li>
                     <li class="menuMobile__lista__item">
                         <a href="#tornilleria" class="abtn">
-                                <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                                <img alt="iconoFlecha" src="./assets/iconos/iconarrow.svg"></img>
                                 Tornillería
                         </a>
                     </li>
                     <li class="menuMobile__lista__item">
                         <a href="#proveedores" class="abtn">
-                                <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                                <img alt="iconoFlecha" src="./assets/iconos/iconarrow.svg"></img>
                                 Proveedores
                         </a>
                     </li>
                     <li class="menuMobile__lista__item">
                         <a href="#productos" class="abtn">
-                                <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                                <img alt="iconoFlecha" src="./assets/iconos/iconarrow.svg"></img>
                                 Catálogo
                         </a>
                     </li>
                     <li class="menuMobile__lista__item">
                         <a href="#contacto" class="abtn">
-                                <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                                <img alt="iconoFlecha" src="./assets/iconos/iconarrow.svg"></img>
                                 Contacto
                         </a>
                     </li>
@@ -145,7 +145,7 @@
                         <button>Contáctanos</button>
                     </a>
                 </div>
-                <img src="assets/image_1.avif" alt="ImagenIlustrativa">
+                <img src="assets/imagen_1.webp" alt="ImagenIlustrativa">
             </article>
             
         </section>
