changing nav colors

--- a/index.html
+++ b/index.html
@@ -45,44 +45,44 @@
         </div>
         <nav class="nav" id="nav">
             <div class="nav__logo">
-                <img  class="nav__logo__img" id="logo" src="assets/logo.avif" alt="Logo">
+                <img  class="nav__logo__img" id="logo" src="assets/logoColor.avif" alt="Logo">
                 <div class="nav__barrita"></div>
                 <p class="nav__logo__p">Distribuidora <br> Industrial <br> Navojoa</p>
             </div>
             <ul>
                 <li>
                     <a href="#inicio">
-                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.svg"></img>
                         Inicio
                     </a>
                 </li>
                 <li>
                     <a href="#quienesSomos">
-                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.svg"></img>
                         ¿Quiénes somos?
                     </a>
                 </li>
                 <li>
                     <a href="#tornilleria">
-                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.svg"></img>
                     Tornillería
                     </a>
                 </li>
                 <li>
                     <a href="#proveedores">
-                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.svg"></img>
                         Proveedores
                     </a>
                 </li>
                 <li>
                     <a href="#productos">
-                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.svg"></img>
                         Catálogo 
                     </a>
                 </li>
                 <li>
                     <a href="#contacto">
-                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.avif"></img>
+                        <img alt="iconoFlecha" src="assets/iconos/iconarrow.svg"></img>
                         Contacto
                     </a>
                 </li>
@@ -139,7 +139,7 @@
         <section class="main">
             <article class="contenido" >
                 <div class="main__title">
-                    <h1>DISTRIBUIDORA INDUSTRIAL NAVOJOA donde obtienes lo mejor al mejor precio.</h1>
+                    <h1>Distribuidora <br> Industrial <br> Navojoa donde obtienes lo mejor al mejor precio.</h1>
                     <h3>¡Contáctanos y permítenos ser tu proveedor de confianza!</h3>
                     <a target="_blank" href="https://wa.me/+526421166931">
                         <button>Contáctanos</button>
