adding social media

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./slider.css">
-    <link rel="stylesheet" href="./tornillos_slide.css">
+    <link rel="stylesheet" href="./social-mediaBar.css">
+    <script src="https://kit.fontawesome.com/529aadbed5.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./assets/minilogo.webp">
     <script defer src="https://code.jquery.com/jquery-latest.js"></script>
     <script defer src="./dinamicNav.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script defer src="./index.js"></script>
     <script defer src="./tornillos_slide.js"></script>
+    
 
     <title>Distribuidora industrial Navojoa</title>
 </head>
@@ -42,6 +44,26 @@
                 <img class="icon" src="./assets/iconos/email.webp" alt="Email">
                 <p> Ventas@dinav.com.mx</p>
             </div>
+            <a target="_blank" class="social-media--icon"  href="https://www.facebook.com/profile.php?id=100092220477587">
+                <div>
+                    <img class="icon" src="./assets/iconos/bxl-facebook-square.svg" alt="facebook">
+                </div>
+            </a>
+            <a target="_blank" class="social-media--icon"  href="https://www.instagram.com/distribuidora_industrial_nav/">
+                <div>
+                    <img class="icon"  src="./assets/iconos/bxl-instagram.svg" alt="instagram">
+                </div>
+            </a>
+            <a target="_blank" class="social-media--icon" href="https://www.tiktok.com/@distribuidoraindu5">
+                <div>
+                    <img class="icon" src="./assets/iconos/bxl-tiktok.svg" alt="tiktok">
+                </div>
+            </a>
+            <a target="_blank" class="social-media--icon" href="https://wa.me/+526421166931">
+                <div>
+                    <img class="icon" src="./assets/iconos/bxl-whatsapp.svg" alt="whatsapp">
+                </div>
+            </a>
         </div>
         <nav class="nav" id="nav">
             <div class="nav__logo">
@@ -378,6 +400,20 @@
                     <img alt="Email" src="assets/iconos/bigEmail.webp" alt="">
                     <p>Ventas@dinav.com.mx</p>
                 </div>
+                <div class="footer__card redes-sociales">
+                    <p>¡Síguenos en nuestras redes sociales!</p>
+                    <div class="footer__card__redes-sociales">
+                        <a target="_blank" href="https://www.facebook.com/profile.php?id=100092220477587">
+                            <img alt="facebook" src="assets/iconos/bxl-facebook-square.svg">
+                        </a>
+                        <a target="_blank" href="https://www.instagram.com/distribuidora_industrial_nav/">
+                            <img alt="instagram" src="assets/iconos/bxl-instagram.svg" >
+                        </a>
+                        <a target="_blank" href="https://www.tiktok.com/@distribuidoraindu5">
+                            <img alt="tiktok" src="assets/iconos/bxl-tiktok.svg">
+                        </a>
+                    </div>
+                </div>
             </div>
 
         </footer>
@@ -387,6 +423,21 @@
             <h3>¡Envianos un mensaje!</h3>
         </div>
         </a>
+        <div class="container-bar">
+            <input type="checkbox" id="btn-social">
+            <label for="btn-social" class="fa fa-play"></label>
+                <div class="icon-social">
+                    <a target="_blank" href="https://www.facebook.com/profile.php?id=100092220477587 " class="fa fa-facebook">
+                        <span id="title">Facebook</span>
+                    </a>
+                    <a target="_blank" href="https://www.instagram.com/distribuidora_industrial_nav/" class="fa fa-instagram">
+                        <span id="title">Instagram</span>
+                    </a>
+                    <a target="_blank" href="https://www.tiktok.com/@distribuidoraindu5" class="fa-brands fa-tiktok">
+                        <span id="title">Tiktok</span>
+                    </a>
+                </div>
+            </div>
     </div>
 </body>
 </html>
