--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="https://wa.me/+526421166931">
                 <div>
                     <img class="icon" src="./assets/iconos/phoneIcon.webp" alt="Whatsapp">
-                    <p>+52 - 642 - 116 -6931</p>
+                    <p>+52 - 642 - 116 -6931 <br/>+52 642 - 109 - 3438</p>
                 </div>
             </a>
             <div>
@@ -390,7 +390,7 @@
             <div class="footer__content">
                 <div class="footer__card">
                     <img alt="Telefono" src="assets/iconos/bigPhone.webp" alt="">
-                    <p>+52 - 642 - 116 - 6931</p>
+                    <p class="footer__phone">+52 - 642 - 116 - 6931 <br/> +52 642 - 109 - 3438</p>
                 </div>
                 <div class="footer__card">
                     <img alt="Horario" src="assets/iconos/bigCalendar.webp" alt="">
