--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./slider.css">
     <link rel="stylesheet" href="./social-mediaBar.css">
+    <link rel="stylesheet" href="./tornillos_slide.css">
     <script src="https://kit.fontawesome.com/529aadbed5.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./assets/minilogo.webp">
     <script defer src="https://code.jquery.com/jquery-latest.js"></script>
@@ -27,12 +28,15 @@
             <a href="https://wa.me/+526421166931">
                 <div>
                     <img class="icon" src="./assets/iconos/phoneIcon.webp" alt="Whatsapp">
-                    <p>+52 - 642 - 116 -6931 <br/>+52 642 - 109 - 3438</p>
+                    <p>+52 642 109 3438 <br/>+52 642 116 6931</p>
                 </div>
             </a>
-            <div>
+            <div  class="tooltip-container">
                 <img class="icon" src="./assets/iconos/calendarIcon.webp" alt="Horario">
                 <p> Lunes a Viernes de 08:00am a 06:00pm <br> Sábado de 8:00am a 1:00pm</p>
+                <div class="tooltip">
+                    Lunes a Viernes de 08:00am a 06:00pm <br> Sábado de 8:00am a 1:00pm
+                </div>
             </div>
             <a target="_blank" href="https://goo.gl/maps/f3qjvEKniKmMa57v7">
                 <div>
@@ -40,9 +44,12 @@
                     <p> Blvd. Manlio Fabio Beltrones 1819, Beltrones, 85860 Navojoa, Son.</p>
                 </div>
             </a>
-            <div>
+            <div class="tooltip-container">
                 <img class="icon" src="./assets/iconos/email.webp" alt="Email">
                 <p> Ventas@dinav.com.mx</p>
+                <div class="tooltip">
+                    Ventas@dinav.com.mx
+                </div>
             </div>
             <a target="_blank" class="social-media--icon"  href="https://www.facebook.com/profile.php?id=100092220477587">
                 <div>
@@ -390,7 +397,7 @@
             <div class="footer__content">
                 <div class="footer__card">
                     <img alt="Telefono" src="assets/iconos/bigPhone.webp" alt="">
-                    <p class="footer__phone">+52 - 642 - 116 - 6931 <br/> +52 642 - 109 - 3438</p>
+                    <p class="footer__phone">+52 642  109  3438 <br/> +52 642 116 6931</p>
                 </div>
                 <div class="footer__card">
                     <img alt="Horario" src="assets/iconos/bigCalendar.webp" alt="">
@@ -417,7 +424,7 @@
             </div>
 
         </footer>
-        <a target="_blank" href="https://wa.me/+526421166931">
+        <a target="_blank" href="https://wa.me/+526421093438">
         <div class="static-msj">
             <img src="assets/iconos/whatsapp.webp" alt="whatsapp">
             <h3>¡Envianos un mensaje!</h3>
